[package]
name = "bevy_turtlesim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.21.0"
rand = "0.8.5"
bevy_rapier2d = { version = "0.23.0", features = ["debug-render-2d", "simd-stable"]}
zenoh = "0.10.0-rc"
futures-lite = "2.0.1"
cdr = "0.2.4"
clap = "4.4.8"
serde = { version = "1.0.192", features = ["derive"] }
flume = "0.11.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
